--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <a href="https://instagram.com/kaleb_a.haile" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/kaleb_alebachew" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
                 <a href="https://github.com/kalebtech/kalebtech" class="footer__icon"><i class='bx bxl-github' ></i></a>
-                <a href="mailto:kalebalebachew4@gmailo.com.com">Send me an email</a>
+                <a href="mailto:kalebalebachew4@gmail.com">Send me an email</a>
             </div>
             <p>2022 &#169; 2022 Kaleb copyright all right reserved</p>
         </footer>
