--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                 <a href="https://instagram.com/kaleb_a.haile" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/kaleb_alebachew" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
                 <a href="https://github.com/kalebtech/kalebtech" class="footer__icon"><i class='bx bxl-github' ></i></a>
-                <a href="mailto:kalebalebachew4@gmail.com">Send me an email</a>
+                <strong><a href="mailto:kalebalebachew4@gmail.com">Send me an email</a></strong>
             </div>
-            <p>2022 &#169; 2022 Kaleb copyright all right reserved</p>
+            <p>2022 &#169; Kaleb copyright all rights reserved</p>
         </footer>
     </body>
 </html>
